--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,31 @@
+engines:
+  rubocop:
+    enabled: true
+    #checks:
+    #	Rubocop/Metrics/ClassLength:
+    #  	enabled: false
+  brakeman:
+   	enabled: true
+    #exclude_fingerprints:
+    #- 08c185b3f764f262539a1f76997d3a89
+  eslint:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+  	enabled: true
+    config:
+    	languages:
+      - c
+      	#mass_threshold: 30
+ratings:
+  paths:
+  - include/**
+  - src/**
+  - tests/**
+  - "**.c"
+  - "**.h"
 exclude_paths:
 - doc/**
+- bin/**
+- liste/**
