--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,31 +1,5 @@
-engines:
-  rubocop:
-    enabled: true
-    #checks:
-    #	Rubocop/Metrics/ClassLength:
-    #  	enabled: false
-  brakeman:
-   	enabled: true
-    #exclude_fingerprints:
-    #- 08c185b3f764f262539a1f76997d3a89
-  eslint:
-    enabled: true
-  csslint:
-    enabled: true
-  duplication:
-  	enabled: true
-    config:
-    	languages:
-      - c
-      	#mass_threshold: 30
-ratings:
-  paths:
-  - include/**
-  - src/**
-  - tests/**
-  - "**.c"
-  - "**.h"
+C: true
 exclude_paths:
-- doc/**
+- doc/**/*
 - bin/**
 - liste/**
